apps/base/dreamwright/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres:18@sha256:4ef4dbc939d61acea57712655ddb4b4ab27419c913f94cca0cd57cb3ea3c2280
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /data
          resources:
            limits:
              cpu: "2"
              memory: "2Gi"
            requests:
              cpu: "0.05"
              memory: "128Mi"
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - dreamwright
                - -d
                - dreamwright
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - dreamwright
                - -d
                - dreamwright
            initialDelaySeconds: 15
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
