apps/base/dreamwright/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dreamwright
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: dreamwright
